--- a/package.json
+++ b/package.json
@@ -1,17 +1,34 @@
 {
 	"name": "vscode-forcecomment",
-	"displayName": "vscode-forcecomment",
-	"description": "Visual Studio Code plugin for forcing you to comment from time to time.",
+	"displayName": "ForceComment",
+	"description": "Forcing you to comment from time to time.",
 	"version": "0.0.1",
+	"publisher": "ainevsia",
+	"author": {
+        "name": "ainevsia"
+    },
 	"engines": {
 		"vscode": "^1.43.0"
 	},
 	"categories": [
 		"Other"
 	],
-	"activationEvents": [
-		"onCommand:extension.forcecomment.startForceComment"
+	"keywords": [
+        "comment"
 	],
+	"homepage": "https://github.com/Ainevsia/vscode-forcecomment",
+	"bugs": {
+        "url": "https://github.com/Ainevsia/vscode-forcecomment/issues",
+        "email": "zhipengxu@sjtu.edu.com"
+	},
+	"license": "BSD-3-Clause",
+	"activationEvents": [
+		"*"
+	],
+	"repository": {
+        "type": "git",
+        "url": "https://github.com/Ainevsia/vscode-forcecomment.git"
+    },
 	"main": "./out/extension.js",
 	"contributes": {
 		"commands": [
