--- a/package.json
+++ b/package.json
@@ -52,6 +52,17 @@
 				"mac": "ctrl+shift+/",
 				"when": "editorTextFocus"
 			}
+		],
+		"colors": [
+			{
+                "id": "forcecomment.blameView.info",
+                "description": "The color of blame info at the end of each line.",
+                "defaults": {
+                    "light": "#237893",
+                    "dark": "#858585",
+                    "highContrast": "#858585"
+                }
+            }
 		]
 	},
 	"scripts": {
